2005-01-06  Dennis Cranston <dennis_cranston@yahoo.com>

	* data/totem.glade:  Use header capitalization for command button
	labels.
	
2005-01-06  Bastien Nocera  <hadess@hadess.net>

	* src/totem-preferences.c: (totem_setup_preferences): remove
	hide_prefs, use gtk_widget_hide directly instead, replace hard-coded
	/apps/totem by GCONF_PREFIX, 
	* src/totem.c: (show_controls), (totem_setup_window):
	when setting up the window, take into account the vbox border for the
	width and height, replace hard-coded border width of 1 by a #define

2005-01-06  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/Makefile.am:
	  Autofoo fixes.

2005-01-06  Bastien Nocera  <hadess@hadess.net>

	* NEWS: upd
	* src/totem.c: (update_seekable): only change the states of the
	"seekable" widgets if the previous state was different

2005-01-06  Bastien Nocera  <hadess@hadess.net>

	* src/totem-statusbar.c: (totem_statusbar_set_time): only update
	the time label if the time actually changed

2005-01-06  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>

	* src/bacon-video-widget-gst.c:
	(bacon_video_widget_get_connection_speed),
	(bacon_video_widget_set_connection_speed),
	(bacon_video_widget_set_tv_out), (bacon_video_widget_get_tv_out),
	(bacon_video_widget_set_audio_out_type),
	(bacon_video_widget_set_show_visuals),
	(bacon_video_widget_set_visuals),
	(bacon_video_widget_set_visuals_quality),
	(bacon_video_widget_set_video_property), (bacon_video_widget_new):
	  Save backend-responsible gconf properties.

2005-01-06  Bastien Nocera  <hadess@hadess.net>

	* src/totem-time-label.c: (totem_time_label_init),
	(totem_time_label_set_time):
	* src/totem-time-label.h: only update the time label if the time has
	actually changed

2005-01-05  Dennis Cranston <dennis_cranston@yahoo.com>

	* data/totem.glade:
	Fix mnemonics for the Combo Boxes
	
2005-01-05  Bastien Nocera  <hadess@hadess.net>

	* data/totem.glade:
	* src/totem-preferences.c: (totem_prefs_set_show_visuals),