@@ -1,3 +1,15 @@
+2005-01-08  Ronald S. Bultje  <rbultje@ronald.bitfreak.net>
+
+	* src/bacon-video-widget-gst.c: (bacon_video_widget_get_subtitle),
+	(bacon_video_widget_set_subtitle), (get_list_of_type),
+	(bacon_video_widget_get_subtitles),
+	(bacon_video_widget_get_languages),
+	(bacon_video_widget_get_language),
+	(bacon_video_widget_set_language), (bacon_video_widget_open),
+	(bacon_video_widget_close):
+	  Add stream selection. The names need some more work, but hey,
+	  it's a start.
+
 2005-01-06  Dennis Cranston <dennis_cranston@yahoo.com>
 
 	* data/totem.glade:  Use header capitalization for command button
